# soaringPenGUI

./: .directory  .gitignore  CMakeLists.txt  Doxyfile.in  README
cameraCalibrations/NGATWebcam/: cameraCalibration.xml  cameraCalibration.yml
cameraCalibrations/charlieWebcam/: cameraCalibration.yml
messages/: CMakeLists.txt  command_message.proto  controller_status_update.proto  emergency_stop_command.proto  follow_path_command.proto  gui_command.proto
src/executables/controller/: main.cpp
src/executables/simpleMarkerTracker/: main.cpp
src/executables/simpleTagTracker/: main.cpp
src/executables/testVideoPublisher/: main.cpp
src/executables/testVideoSubscriber/: main.cpp
src/executables/unitTests/: main.cpp
src/executables/userInterface/: main.cpp
